[code] use List.copyOf over Collections.unmodifiableList